# brosdk-python

./: .gitignore  README.md  demo.py  pyproject.toml  requirements.txt
brosdk/: __init__.py  api.py  console.py  ffi.py  manager.py
